--- a/package.json
+++ b/package.json
@@ -7,16 +7,19 @@
 		"url": "https://github.com/wdemarest/candyhop.git"
 	},
 	"dependencies": {
-		"body-parser": "^1.12.4",
-		"cookie-parser": "^1.4.3",
+		"body-parser": "^1.19.0",
+		"connect-redis": "^3.4.1",
+		"cookie-parser": "^1.4.4",
 		"express": "^4.12.3",
-		"mandrill-send": "^0.1.0",
-		"serve-static": "^1.9.2",
-		"watched-config": "^1.0.0",
+		"express-session": "^1.16.1",
+		"http-proxy-middleware": "^0.19.1",
 		"mkdirp": "^0.5.1",
-		"express-session": "^1.15.6",
+		"mongodb": "^3.2.4",
+		"paypal-rest-sdk": "^1.7.1",
+		"redis": "^2.8.0",
+		"serve-static": "^1.14.0",
 		"session-file-store": "^1.1.2",
-		"paypal-rest-sdk": "^1.7.1"
+		"watched-config": "^1.0.0"
 	},
 	"devDependencies": {},
 	"scripts": {
