--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"cookie-parser": "^1.4.4",
 		"express": "^4.12.3",
 		"express-session": "^1.16.1",
+		"hjson": "^3.1.2",
 		"http-proxy-middleware": "^0.19.1",
 		"mkdirp": "^0.5.1",
 		"mongodb": "^3.2.4",
