--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"express-session": "^1.16.1",
 		"hjson": "^3.1.2",
 		"http-proxy-middleware": "^0.19.1",
+		"iplocation": "^6.1.0",
 		"mkdirp": "^0.5.1",
 		"mongodb": "^3.2.4",
 		"paypal-rest-sdk": "^1.7.1",
